Fixed JDK11 deprecation.
Fine in Java 8 but if we can support both...